--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="theme-color" content="#0b0f13" />
-  <title> BRBR — Global Youth. Global Hope.</title>
-  <meta name="description" content="BRBR is a meme coin with a serious mission: build a supportive web for youth, promote community action, and fund awareness initiatives." />
+  <title> BRBRT — Global Youth. Global Hope.</title>
+  <meta name="description" content="BRBRT is a meme coin with a serious mission: build a supportive web for youth, promote community action, and fund awareness initiatives." />
   <link rel="canonical" href="https://barbourbrbr.xyz/" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="BRBR — Global Youth. Global Hope." />
+  <meta property="og:title" content="BRBRT — Global Youth. Global Hope." />
   <meta property="og:description" content="A meme coin with a serious mission: supportive web, community-first, and real impact." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://barbourbrbr.xyz/" />
@@ -25,9 +25,9 @@
   <!-- Top Navigation -->
   <header class="topbar">
     <div class="topbar__inner">
-      <a class="brand" href="#top" aria-label="Barbour BRBR Home">
+      <a class="brand" href="#top" aria-label="BRBRT Home">
         <span class="brand__dot"></span>
-        <span class="brand__name">BRBR</span>
+        <span class="brand__name">BRBRT</span>
       </a>
 
       <nav class="nav" id="nav">
@@ -115,7 +115,7 @@
           <div class="card__kicker">THE SILENCE OF FEAR</div>
           <h2 class="card__title">A real story. A real mission.</h2>
           <p class="card__text">
-            BRBR is a <strong>meme coin</strong> with a serious vision:
+            BRBRT is a <strong>meme coin</strong> with a serious vision:
             build a supportive web for youth, promote community action, and fund awareness initiatives.
           </p>
 
@@ -150,7 +150,7 @@
         </div>
 
         <div class="poster reveal" aria-label="Story Poster">
-          <img src="assets/story.png" alt="BRBR — The Silence of Fear / Break the Chain / Build Hope" />
+          <img src="assets/story.png" alt="BRBRT — The Silence of Fear / Break the Chain / Build Hope" />
           <div class="poster__glow" aria-hidden="true"></div>
         </div>
       </div>
@@ -163,7 +163,7 @@
           <div class="card__kicker">TOKEN REVEAL</div>
           <h2 class="card__title">Break the chain. Build hope.</h2>
           <p class="card__text">
-            BRBR is a meme coin on BSC designed for community movement and long-term trust.
+            BRBRT is a meme coin on BSC designed for community movement and long-term trust.
             Clear links, clean UX, and a public footprint.
           </p>
 
@@ -186,7 +186,7 @@
           </div>
 
           <div class="fineprint">
-            Transparency note: This website is informational. BRBR is a meme coin. Nothing here is financial advice.
+            Transparency note: This website is informational. BRBRT is a meme coin. Nothing here is financial advice.
           </div>
 
           <div class="divider"></div>
@@ -230,7 +230,7 @@
         <div class="section__kicker">ROADMAP</div>
         <h2 class="section__title">A strategic, community-first rollout</h2>
         <p class="section__subtitle">
-          BRBR is built for the community. Governance and direction are designed to evolve publicly,
+          BRBRT is built for the community. Governance and direction are designed to evolve publicly,
           with verifiable progress and clear milestones.
         </p>
       </div>
@@ -318,7 +318,7 @@
       <div class="callout reveal">
         <div class="callout__title">Community Ownership Promise (clean, compliant wording)</div>
         <div class="callout__text">
-          BRBR is designed to be <strong>community-driven</strong>. Governance and direction will be shaped publicly.
+          BRBRT is designed to be <strong>community-driven</strong>. Governance and direction will be shaped publicly.
           Always verify on-chain and via official links. No hidden promises — only transparent progress.
         </div>
       </div>
@@ -387,7 +387,7 @@
         <div>
           <div class="footer__brand">
             <span class="brand__dot"></span>
-            <strong>BRBR</strong>
+            <strong>BRBRT</strong>
           </div>
           <div class="footer__muted">Global Youth. Global Hope.</div>
         </div>
@@ -399,7 +399,7 @@
         </div>
 
         <div class="footer__muted">
-          © <span id="year"></span> BRBR. All rights reserved.
+          © <span id="year"></span> BRBRT. All rights reserved.
         </div>
       </div>
     </footer>
