--- a/legal.html
+++ b/legal.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>BRBR — Legal / Copyright</title>
-  <meta name="copyright" content="© 2026 Barbour BRBR. All rights reserved.">
+  <title>BRBRT — Legal / Copyright</title>
+  <meta name="copyright" content="© 2026 BRBRT. All rights reserved.">
   <meta name="referrer" content="no-referrer">
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -20,7 +20,7 @@
   <header class="topbar">
     <a class="brand" href="index.html">
       <span class="brandDot"></span>
-      <span class="brandText">BARBOUR <b>BRBR</b></span>
+      <span class="brandText"><b>BRBRT</b></span>
     </a>
     <div class="topActions">
       <a class="pill small" href="index.html" data-click>← Back</a>
@@ -39,12 +39,12 @@
 
         <h2 class="sectionTitle" style="margin-top:18px">Ownership</h2>
         <p class="muted">
-          © <span id="year"></span> Barbour BRBR. All rights reserved.
+          © <span id="year"></span> BRBRT. All rights reserved.
         </p>
 
         <h2 class="sectionTitle" style="margin-top:18px">Meme Coin Disclaimer</h2>
         <p class="muted">
-          BRBR is a BSC meme coin / community token. Crypto assets are volatile and risky. This website is not financial advice.
+          BRBRT is a BSC meme coin / community token. Crypto assets are volatile and risky. This website is not financial advice.
         </p>
 
         <h2 class="sectionTitle" style="margin-top:18px">Contact</h2>
