--- a/privacy.html
+++ b/privacy.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="theme-color" content="#0b0f13" />
-  <title>Privacy Policy — BARBOUR BRBR</title>
-  <meta name="description" content="BARBOUR BRBR Privacy Policy" />
+  <title>Privacy Policy — BRBRT</title>
+  <meta name="description" content="BRBRT Privacy Policy" />
   <link rel="canonical" href="https://barbourbrbr.xyz/privacy.html" />
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -14,7 +14,7 @@
 
   <header class="topbar">
     <div class="topbar__inner">
-      <a class="brand" href="index.html"><span class="brand__dot"></span><span class="brand__name">BARBOUR BRBR</span></a>
+      <a class="brand" href="index.html"><span class="brand__dot"></span><span class="brand__name">BRBRT</span></a>
       <nav class="nav" id="nav">
         <a class="nav__link" href="index.html">Home</a>
         <a class="nav__link" href="whitepaper.html">Whitepaper</a>
@@ -70,14 +70,14 @@
   <footer class="footer">
     <div class="container footer__inner">
       <div>
-        <div class="footer__brand"><span class="brand__dot"></span><strong>BARBOUR BRBR</strong></div>
+        <div class="footer__brand"><span class="brand__dot"></span><strong>BRBRT</strong></div>
         <div class="footer__muted">Global Youth. Global Hope.</div>
       </div>
       <div class="footer__links">
         <a href="terms.html">Terms</a>
         <a href="index.html#contact">Contact</a>
       </div>
-      <div class="footer__muted">© <span id="year"></span> BARBOUR BRBR. All rights reserved.</div>
+      <div class="footer__muted">© <span id="year"></span>BRBRT. All rights reserved.</div>
     </div>
   </footer>
 
