--- a/terms.html
+++ b/terms.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="theme-color" content="#0b0f13" />
-  <title>Terms — BARBOUR BRBR</title>
-  <meta name="description" content="BARBOUR BRBR Terms and Disclaimer" />
+  <title>Terms — BRBRT</title>
+  <meta name="description" content="BRBRT Terms and Disclaimer" />
   <link rel="canonical" href="https://barbourbrbr.xyz/terms.html" />
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -14,7 +14,7 @@
 
   <header class="topbar">
     <div class="topbar__inner">
-      <a class="brand" href="index.html"><span class="brand__dot"></span><span class="brand__name">BARBOUR BRBR</span></a>
+      <a class="brand" href="index.html"><span class="brand__dot"></span><span class="brand__name">BRBRT</span></a>
       <nav class="nav" id="nav">
         <a class="nav__link" href="index.html">Home</a>
         <a class="nav__link" href="whitepaper.html">Whitepaper</a>
@@ -44,7 +44,7 @@
 
         <h2 class="card__titleSm">2) Meme coin notice</h2>
         <p class="card__text">
-          BRBR is a <strong>meme coin</strong>. Crypto assets can be highly volatile. You can lose funds.
+          BRBRT is a <strong>meme coin</strong>. Crypto assets can be highly volatile. You can lose funds.
           Always do your own research and verify official sources.
         </p>
 
@@ -61,7 +61,7 @@
 
         <h2 class="card__titleSm">5) Intellectual property & copyright</h2>
         <p class="card__text">
-          © <span id="year"></span> BARBOUR BRBR. All rights reserved.  
+          © <span id="year"></span> BRBRT. All rights reserved.  
           All brand elements, website layout, and original content are protected by applicable intellectual property laws.
           Unauthorized copying or redistribution may be subject to takedown requests.
         </p>
@@ -88,14 +88,14 @@
   <footer class="footer">
     <div class="container footer__inner">
       <div>
-        <div class="footer__brand"><span class="brand__dot"></span><strong>BARBOUR BRBR</strong></div>
+        <div class="footer__brand"><span class="brand__dot"></span><strong>BRBRT</strong></div>
         <div class="footer__muted">Global Youth. Global Hope.</div>
       </div>
       <div class="footer__links">
         <a href="privacy.html">Privacy</a>
         <a href="index.html#contact">Contact</a>
       </div>
-      <div class="footer__muted">© <span id="year"></span> BARBOUR BRBR. All rights reserved.</div>
+      <div class="footer__muted">© <span id="year"></span>BRBRT. All rights reserved.</div>
     </div>
   </footer>
 
