--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <meta name="theme-color" content="#0b0f13" />
   <title> BRBRT — Global Youth. Global Hope.</title>
   <meta name="description" content="BRBRT is a meme coin with a serious mission: build a supportive web for youth, promote community action, and fund awareness initiatives." />
-  <link rel="canonical" href="https://barbourbrbr.xyz/" />
+  <link rel="canonical" href="https://brbrt.com/" />
 
   <!-- Open Graph -->
   <meta property="og:title" content="BRBRT — Global Youth. Global Hope." />
   <meta property="og:description" content="A meme coin with a serious mission: supportive web, community-first, and real impact." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://barbourbrbr.xyz/" />
-  <meta property="og:image" content="https://barbourbrbr.xyz/assets/story.png" />
+  <meta property="og:url" content="https://brbrt.com/" />
+  <meta property="og:image" content="https://brbrt.com/assets/story.png" />
 
   <link rel="stylesheet" href="style.css" />
 </head>
