--- a/association.html
+++ b/association.html
@@ -6,7 +6,7 @@
   <meta name="theme-color" content="#0b0f13" />
   <title>Association — BRBRT</title>
   <meta name="description" content="BRBRT Association — community-first mission, supportive web, awareness, and long-term impact." />
-  <link rel="canonical" href="https://barbourbrbr.xyz/association.html" />
+  <link rel="canonical" href="https://brbrt.com/association.html" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
