--- a/whitepaper.html
+++ b/whitepaper.html
@@ -6,7 +6,7 @@
   <meta name="theme-color" content="#0b0f13" />
   <title>BRBRT Whitepaper — BRBRT</title>
   <meta name="description" content="BRBRT Whitepaper — meme coin with a serious mission: supportive web, community-first governance, and awareness initiatives." />
-  <link rel="canonical" href="https://barbourbrbr.xyz/whitepaper.html" />
+  <link rel="canonical" href="https://brbrt.com/whitepaper.html" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
