--- a/terms.html
+++ b/terms.html
@@ -6,7 +6,7 @@
   <meta name="theme-color" content="#0b0f13" />
   <title>Terms — BRBRT</title>
   <meta name="description" content="BRBRT Terms and Disclaimer" />
-  <link rel="canonical" href="https://barbourbrbr.xyz/terms.html" />
+  <link rel="canonical" href="https://brbrt.com/terms.html" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
