--- a/privacy.html
+++ b/privacy.html
@@ -6,7 +6,7 @@
   <meta name="theme-color" content="#0b0f13" />
   <title>Privacy Policy — BRBRT</title>
   <meta name="description" content="BRBRT Privacy Policy" />
-  <link rel="canonical" href="https://barbourbrbr.xyz/privacy.html" />
+  <link rel="canonical" href="https://brbrt.com/privacy.html" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
