--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
         <div class="section__kicker">CONTACT</div>
         <h2 class="section__title">Reach us safely</h2>
         <p class="section__subtitle">
-          Official email: <strong id="emailText">contact@barbourbrbr.xyz</strong>
+          Official email: <strong id="emailText">contact@brbrt.com</strong>
         </p>
       </div>
 
@@ -342,7 +342,7 @@
           </p>
 
           <div class="row row--wrap">
-            <a class="btn btn--primary" id="emailLink" href="#">Email: contact@barbourbrbr.xyz</a>
+            <a class="btn btn--primary" id="emailLink" href="#">Email: contact@brbrt.com</a>
             <button class="btn btn--ghost" id="copyEmailBtn" type="button">Copy Email</button>
           </div>
 
