--- a/terms.html
+++ b/terms.html
@@ -51,7 +51,7 @@
         <h2 class="card__titleSm">3) Official links</h2>
         <p class="card__text">
           Only use official links from this website or the official Linktree:
-          <a href="https://linktr.ee/barbourbrbr" target="_blank" rel="noopener noreferrer">linktr.ee/barbourbrbr</a>.
+          <a href="https://linktr.ee/BRBRT" target="_blank" rel="noopener noreferrer">linktr.ee/BRBRT</a>.
         </p>
 
         <h2 class="card__titleSm">4) No warranties</h2>
@@ -74,7 +74,7 @@
 
         <h2 class="card__titleSm">7) Contact</h2>
         <p class="card__text">
-          Official email: <strong>contact@barbourbrbr.xyz</strong>
+          Official email: <strong>contact@brbrt.com</strong>
         </p>
       </div>
 
