--- a/whitepaper.html
+++ b/whitepaper.html
@@ -115,7 +115,7 @@
       <div class="card glass reveal">
         <div class="card__kicker">CONTACT</div>
         <p class="card__text">
-          Official email: <strong>contact@barbourbrbr.xyz</strong>
+          Official email: <strong>contact@brbrt.com</strong>
         </p>
       </div>
 
