--- a/whitepaper.html
+++ b/whitepaper.html
@@ -22,7 +22,7 @@
       <nav class="nav" id="nav">
         <a class="nav__link" href="index.html#roadmap">Roadmap</a>
         <a class="nav__link" href="association.html">Association</a>
-        <a class="nav__pill" href="https://linktr.ee/barbourbrbr" target="_blank" rel="noopener noreferrer">Linktree</a>
+        <a class="nav__pill" href="https://linktr.ee/BRBRT" target="_blank" rel="noopener noreferrer">Linktree</a>
       </nav>
 
       <div class="topbar__actions">
