--- a/association.html
+++ b/association.html
@@ -24,7 +24,7 @@
         <a class="nav__link" href="index.html#token">Token</a>
         <a class="nav__link" href="index.html#roadmap">Roadmap</a>
         <a class="nav__link" href="whitepaper.html">Whitepaper</a>
-        <a class="nav__pill" href="https://linktr.ee/barbourbrbr" target="_blank" rel="noopener noreferrer">Linktree</a>
+        <a class="nav__pill" href="https://linktr.ee/BRBRT" target="_blank" rel="noopener noreferrer">Linktree</a>
       </nav>
 
       <div class="topbar__actions">
@@ -91,7 +91,7 @@
           <div class="card__kicker">OFFICIAL LINKS</div>
           <p class="card__text">
             Linktree:
-            <a href="https://linktr.ee/barbourbrbr" target="_blank" rel="noopener noreferrer">linktr.ee/barbourbrbr</a><br/>
+            <a href="https://linktr.ee/BRBRT" target="_blank" rel="noopener noreferrer">linktr.ee/BRBRT</a><br/>
             BscScan:
             <a href="https://bscscan.com/token/0xf97522ABEf762d28729E073019343b72C6e8D2C1" target="_blank" rel="noopener noreferrer">Token Explorer</a><br/>
             PancakeSwap:
