--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <a class="nav__link" href="#roadmap">Roadmap</a>
         <a class="nav__link" href="whitepaper.html">Whitepaper</a>
         <a class="nav__link" href="association.html">Association</a>
-        <a class="nav__pill" href="https://linktr.ee/barbourbrbr" target="_blank" rel="noopener noreferrer">Linktree</a>
+        <a class="nav__pill" href="https://linktr.ee/BRBRT" target="_blank" rel="noopener noreferrer">Linktree</a>
       </nav>
 
       <div class="topbar__actions">
@@ -96,7 +96,7 @@
         </div>
 
         <div class="hero__quicklinks reveal">
-          <a class="chip" href="https://linktr.ee/barbourbrbr" target="_blank" rel="noopener noreferrer">Linktree</a>
+          <a class="chip" href="https://linktr.ee/BRBRT" target="_blank" rel="noopener noreferrer">Linktree</a>
           <a class="chip" href="https://pancakeswap.finance/swap?outputCurrency=0xf97522ABEf762d28729E073019343b72C6e8D2C1&chain=bsc" target="_blank" rel="noopener noreferrer">PancakeSwap</a>
           <a class="chip" href="https://bscscan.com/token/0xf97522ABEf762d28729E073019343b72C6e8D2C1" target="_blank" rel="noopener noreferrer">BscScan</a>
         </div>
