--- a/legal.html
+++ b/legal.html
@@ -68,7 +68,7 @@
 
     // LINKS
     const BRBR_LINKS = {
-      linktree: "https://linktr.ee/barbourbrbr",
+      linktree: "https://linktr.ee/BRBRT",
       pancakeswap: "https://pancakeswap.finance/swap?outputCurrency=0xf97522ABEf762d28729E073019343b72C6e8D2C1&chain=bsc",
       bscscan: "https://bscscan.com/token/0xf97522ABEF762d28729E073019343b72C6e8D2C1"
     };
