--- a/association.html
+++ b/association.html
@@ -74,7 +74,7 @@
 
           <div class="card__kicker">CONTACT</div>
           <p class="card__text">
-            Official email: <strong>contact@barbourbrbr.xyz</strong>
+            Official email: <strong>contact@brbrt.com</strong>
           </p>
 
           <div class="row row--wrap">
