--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
         <div class="section__kicker">CONTACT</div>
         <h2 class="section__title">Reach us safely</h2>
         <p class="section__subtitle">
-          Official email: <strong id="emailText">contact@brbrt.com</strong>
+          Official email: <strong id="emailText">contact@brbr.com</strong>
         </p>
       </div>
 
