--- a/legal.html
+++ b/legal.html
@@ -75,14 +75,14 @@
 
     // EMAIL (CHANGE IF NEEDED)
     const EMAIL_USER = "contact";
-    const EMAIL_DOMAIN = "barbourbrbr.xyz";
+    const EMAIL_DOMAIN = "brbrt.com";
     const CONTACT_EMAIL = `${EMAIL_USER}@${EMAIL_DOMAIN}`;
     const shown = `${EMAIL_USER} [at] ${EMAIL_DOMAIN}`;
 
     // Render protected email
     document.getElementById("emailText").textContent = shown;
     document.querySelectorAll("[data-email]").forEach(el=>{
-      el.setAttribute("href", `mailto:${CONTACT_EMAIL}?subject=${encodeURIComponent("BRBR — Contact")}`);
+      el.setAttribute("href", `mailto:${CONTACT_EMAIL}?subject=${encodeURIComponent("BRBRT — Contact")}`);
     });
 
     // Click sound
