--- a/privacy.html
+++ b/privacy.html
@@ -56,7 +56,7 @@
 
         <h2 class="card__titleSm">Contact</h2>
         <p class="card__text">
-          Official email: <strong>contact@barbourbrbr.xyz</strong>
+          Official email: <strong>contact@brbrt.com</strong>
         </p>
       </div>
 
