--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         <div class="hero__cta reveal">
           <a class="btn btn--primary" href="#story" id="watchStoryBtn">Watch the Story</a>
-          <a class="btn btn--secondary" href="#token">Buy / Explore BRBR</a>
+          <a class="btn btn--secondary" href="#token">Buy / Explore BRBRT</a>
         </div>
 
         <div class="hero__quicklinks reveal">
@@ -203,7 +203,7 @@
 
         <!-- LOGO VIDEO (fixed: not cropped) -->
         <div class="card glass reveal">
-          <div class="card__kicker">BRBR LOGO • CINEMATIC LOOP</div>
+          <div class="card__kicker">BRBRT LOGO • CINEMATIC LOOP</div>
           <div class="videoCard">
             <video
               class="videoCard__video"
